--- a/Develop/index.html
+++ b/Develop/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <!-- Add a descriptive title -->
-    <title>Horiseon</title>
+    <title>Horiseon Home</title>
 </head>
 
 <body>
-    <div class="header">
+    <!-- Replace "div" with semantic "nav" tag -->
+    <nav>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -24,67 +25,79 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </nav>
     <!-- Add alt description to background image -->
-    <div class="hero" alt="Background image of a team of developers cooperating on a project around a conference table."></div>
-    <div class="content">
-        <div class="search-engine-optimization">
-            <!-- Add alt description for search engine optimization image -->
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Office supplies on a wooden tabletop, including a notebook, laptop, pens, a magnifying glass, and a mug of coffee."/>
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management" alt="A laptop on a desk open to a graph presentation labeled 'Reputation'">
-            <!-- Add alt description for online reputation management image -->
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
-            <h2>Online Reputation Management</h2>
-            <p>
+    <div class="hero" alt="Background image of a team of developers cooperating together on a project around a conference table.">
+    </div>
+    <!-- Added semantic "main" tag to describe the main portion of the page. -->
+    <main>
+        <div class="content">
+            <!-- Replace "div" with semantic "section" tag -->
+            <section class="search-engine-optimization">
+                <!-- Add alt description for search engine optimization image -->
+                <img id="search-engine-optimization" src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Office supplies on a wooden tabletop, presenting the feeling of a busy, yet organized workspace."/>
+                <h2>Search Engine Optimization</h2>
+                <p>
+                    The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                </p>
+            </section>
+            <!-- Replace "div" with semantic "section" tag -->
+            <section id="online-reputation-management" class="online-reputation-management" alt="A laptop on a desk open to a graph presentation labeled 'Reputation.' The graph shows that reputation is increasing.">
+                <!-- Add alt description for online reputation management image -->
+                <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+                <h2>Online Reputation Management</h2>
+                <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
+                </p>
+            </section>
+            <!-- Replace "div" with semantic "section" tag -->
+            <section id="social-media-marketing" class="social-media-marketing">
+                <!-- Add alt description for social media marketing image -->
+                <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="A tabletop littered with various icons and phrases related to social media platforms and functions."/>
+                <h2>Social Media Marketing</h2>
+                <p>
+                    Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                </p>
+            </section>
         </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <!-- Add alt description for social media marketing image -->
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="A tabletop littered with various icons and phrases related to social media platforms and functions"/>
-            <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-            </p>
-        </div>
-    </div>
-    <div class="benefits">
-        <div class="benefit-lead">
-            <h3>Lead Generation</h3>
-            <!-- Add empty alt description for lead generation icon -->
-            <img src="./assets/images/lead-generation.png" alt=""/>
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
-        </div>
-        <div class="benefit-brand">
-            <h3>Brand Awareness</h3>
-            <!-- Add empty alt description for brand awareness icon -->
-            <img src="./assets/images/brand-awareness.png" alt=""/>
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
-        </div>
-        <div class="benefit-cost">
-            <h3>Cost Management</h3>
-            <!-- Add empty alt description for cost management icon -->
-            <img src="./assets/images/cost-management.png" alt=""/>
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
-        </div>
-    </div>
-    <div class="footer">
+    
+
+        <!-- Replace "div" with semantic "aside" tag -->
+        <aside>
+            <div class="benefit-lead">
+                <h3>Lead Generation</h3>
+                <!-- Add empty alt description for lead generation icon -->
+                <img src="./assets/images/lead-generation.png" alt=""/>
+                <p>
+                    Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+                </p>
+            </div>
+            <div class="benefit-brand">
+                <h3>Brand Awareness</h3>
+                <!-- Add empty alt description for brand awareness icon -->
+                <img src="./assets/images/brand-awareness.png" alt=""/>
+                <p>
+                    Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+                </p>
+            </div>
+            <div class="benefit-cost">
+                <h3>Cost Management</h3>
+                <!-- Add empty alt description for cost management icon -->
+                <img src="./assets/images/cost-management.png" alt=""/>
+                <p>
+                    As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+                </p>
+            </div>
+        </aside>
+    </main>
+
+    <!-- Replace "div" with semantic "footer" tag -->
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
